--- a/charts/voting-app-vote-python/values.yaml
+++ b/charts/voting-app-vote-python/values.yaml
@@ -1,7 +1,7 @@
 # Default values for python.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-replicaCount: 1
+replicaCount: 3
 image:
   repository: draft
   tag: dev
@@ -23,3 +23,26 @@ resources:
     memory: 128Mi
 ingress:
   enabled: false
+canary:
+  enable: true
+  service:
+    hosts:
+    - istio-voting-app-vote-canary.wedevops.io
+    gateways:
+    - voting-app.istio-system.svc.cluster.local
+  canaryAnalysis:
+    interval: 120s
+    threshold: 5
+    maxWeight: 50
+    stepWeight: 10
+    metrics:
+    - name: istio_requests_total
+      # minimum req success rate (non 5xx responses)
+      # percentage (0-100)
+      threshold: 99
+      interval: 60s
+    - name: istio_request_duration_seconds_bucket
+      # maximum req duration P99
+      # milliseconds
+      threshold: 500
+      interval: 60s
